--- a/style.css
+++ b/style.css
@@ -1,9 +1,37 @@
-html{
-    background-color: #e9e9e9;
+html {
+    background-color: rgb(177, 177, 177);
+}
+
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center;
 }
 
 .component {
-    background-color: #ffffff;
+    background-color: white;
     height: 528px;
-    width: 408px; 
+    width: 408px;
+    overflow: hidden;
+}
+
+img#castle {
+    width: 100%;
+
+}
+#preview {
+    height: 15em;
+    overflow: hidden;
+}
+
+#text {
+    padding: 1em 44px 1em 44px; 
 }
